[gd_scene load_steps=33 format=2]

[ext_resource path="res://scripts/WorldComplete.gd" type="Script" id=1]
[ext_resource path="res://sprites/door/door-Sheet.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 336, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 432, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 528, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 624, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 672, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 816, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 864, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 912, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 1008, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 1056, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 1104, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 1152, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 1200, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 1248, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 1296, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 1344, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 64 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": false,
"name": "open",
"speed": 30.0
}, {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "greenDiamond",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ) ],
"loop": true,
"name": "blueDiamond",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ) ],
"loop": true,
"name": "yellowDiamond",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ) ],
"loop": true,
"name": "pinkDiamond",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 24.1346, 32.0498 )

[node name="WorldCompleteSprite" type="AnimatedSprite"]
position = Vector2( 32, 32 )
z_index = 1
frames = SubResource( 29 )
script = ExtResource( 1 )

[node name="WorldComplete" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldComplete"]
position = Vector2( 1.14441e-05, -0.130478 )
shape = SubResource( 30 )

[node name="Timer" type="Timer" parent="."]

[node name="blueDiamond" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 48, 0, 48, 64 )

[node name="greenDiamond" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 0, 48, 64 )

[node name="pinkDiamond" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 144, 0, 48, 64 )

[node name="yellowDiamond" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 192, 0, 48, 64 )
[connection signal="area_entered" from="WorldComplete" to="." method="_on_WorldComplete_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
